# kernel_xiaomi_sm8750-modules

./: Android.bp  Android.mk  BUILD.bazel  EnableBazel.mk  Kbuild  Kbuild.am  Kconfig  adreno_gen8_snapshot.c  adreno_gen8_snapshot.h  adreno_hwsched.c  audio_kernel_modules.mk  audio_kernel_product_board.mk  audio_modules.bzl  bt_kernel_product_board.mk  bt_kernel_vendor_board.mk  bt_modules.bzl  camera_modules.bzl  dataipa_dlkm_vendor_board.mk  datarmnet_dlkm_vendor_board.mk  datarmnet_ext_dlkm_vendor_board.mk  define_modules.bzl  display_modules.bzl  dsp_kernel_board.mk  dsp_kernel_product.mk  eva_kernel_board.mk  eva_kernel_product.mk  eva_module_build.bzl  eva_modules.bzl  fingerprint_product.mk  kgsl_sharedmem.c  mmrm_modules_build.bzl  nfc_kernel_dlkm_vendor_board.mk  niobe.bzl  pineapple.bzl  pineapple_defconfig  product.mk  project_defconfig.bzl  qbt_handler.c  securemsm_kernel_product_board.mk  securemsm_kernel_vendor_board.mk  (+14 more)
asoc/: msm-audio-defs.h  msm_common.c  msm_dailink.h  pineapple.c  sun-port-config.h  sun.c
atmel_mxt/: atmel_mxt_ts.c
btfmcodec/: btfm_codec.c  btfm_codec_btadv_interface.c  btfm_codec_interface.c
cnss2/: Kconfig  bus.c  bus.h  canoe_etm_peach-v2  debug.c  genl.c  genl.h  main.c  main.h  pci.c  pci.h  pci_platform.h  pci_qcom.c  pci_qcom_ecam.c  power.c  qmi.c  qmi.h  reg.h
cnss_prealloc/: cnss_prealloc.c
cnss_utils/: cnss_common.h  cnss_utils.c  wlan_firmware_service_v01.c  wlan_firmware_service_v01.h
config/: gki_lahainatouch.conf  gki_lahainatouchconf.h  gki_niobedisp.conf  gki_niobedispconf.h  gki_parrotconf.h  gki_sun.conf  (+12 more)
(+1524 files in other folders)
